# SEDICOMM-DevOps-DevNet-Basic

.github/: copilot-instructions.md
2.1 Lab/: netmico-cisco_21_22_lab.py
2.5 Lab/: lab 2.5 part2.py  lab 2.5 part3.py  pyproject.toml
2.7 lab/: lab27.py  lab27_capabilities.txt  pyproject.toml
2.8 lab/: lab28_interfaces_state.txt  lab29.py  pyproject.toml
2.9 lab/: lab28.py  pyproject.toml
ISS/: README.md
ISS/templates/: index.html
MapQuest/: app.py
Part2/: Введение в DevOps_DevNet часть 2_05112025.docx
Part3/: 02_list-dicts.py
Part4/: 03_personal-info.py  04_if-vlan.py  06_while-loop.py  07_file-access.py  devices.txt
Part5/: 08_parse-json_sol.py
Part5/ISS/: app.py
Part5/MapQuest/: README.md  directions_logic.py
Part5/MapQuest/templates/: index.html
Part5/StockData_ExpertAPI/: main.py
Part5/Sunrise/: app.py
StockData_ExpertAPI/: .env  README.md
